--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Fabric==1.5.3
 Flask==0.9
 Jinja2==2.6
 Werkzeug==0.8.3
@@ -5,4 +6,6 @@ beautifulsoup4==4.1.3
 distribute==0.6.28
 gunicorn==0.17.2
 html5lib==0.95
+paramiko==1.9.0
+pycrypto==2.6
 wsgiref==0.1.2
