Adding SSL support.

--- a/confs/nginx.conf
+++ b/confs/nginx.conf
@@ -8,3 +8,17 @@ server {
             proxy_pass http://127.0.0.1:8100;
     }
 }
+
+server {
+    listen 443;
+    server_name gisted.in;
+    ssl on;
+    ssl_certificate /home/ubuntu/work/gisted/confs/gisted_in.crt;
+    ssl_certificate_key /home/ubuntu/work/gisted/confs/server.key;
+
+    location / {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_pass http://127.0.0.1:8100;
+    }
+}
